refacto(config): #CO-1693 refacto config to use model